labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-service
  labels:
    app.kubernetes.io/name: "backend"
    app.kubernetes.io/components: "service"
    app.kubernetes.io/version: "v1.0"
spec:
  containers:
    - name: backend-container
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend-service
  labels:
    app.kubernetes.io/name: "frontend"
    app.kubernetes.io/components: "service"
    app.kubernetes.io/version: "v1.0"
spec:
  containers:
    - name: frontend-container
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: logging-service
  labels:
    app.kubernetes.io/name: "logging"
    app.kubernetes.io/components: "utility"
    app.kubernetes.io/version: "v2.0"
spec:
  containers:
    - name: logging-container
      image: alpine
      command: ["sh","-c","while true; do echo 'Logging service running'; sleep 3600; done"]
---

apiVersion: v1
kind: Pod
metadata:
  name: monitoring-service
  labels:
    app.kubernetes.io/name: "monitoring"
    app.kubernetes.io/components: "utility"
    app.kubernetes.io/version: "v1.1"
spec:
  containers:
    - name: frontend-container
      image: nginx
---
