external_service.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: my-service-1
  labels:
    kubernetes.io/service-name: my-service
  addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 9376
  endpoints:
    - addresses:
      - "10.4.5.6"
    - addresses:
      - "10.1.2.3"
